--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="assets/css/app.css">
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
     
     <title>Paskal Novakov - CV</title>
@@ -25,11 +23,11 @@
             </div>
             <div class="f-item">
                 <ul class="main-contacts tx-sm">
-                    <li>paskal.novakov@gmail.com <i class="c-blue fa fa-inbox" aria-hidden="true"></i></li>
-                    <li>+359 89 600 1913 <i class="c-blue fa fa-mobile" aria-hidden="true"></i></li>
+                    <li><a href="mail:paskal.novakov@gmail.com">paskal.novakov@gmail.com</a> <i class="c-blue fa fa-inbox" aria-hidden="true"></i></li>
+                    <li><a href="tel:+359896001913">+359 89 600 1913</a> <i class="c-blue fa fa-mobile" aria-hidden="true"></i></li>
                     <li>Varna, Bulgaria <i class="c-blue fa fa-map-marker" aria-hidden="true"></i></li>
-                    <li>bg.linkedin.com/in/paskal-novakov-87704896 <i class="c-blue fa fa-linkedin-square" aria-hidden="true"></i></li>
-                    <li>github.com/PaskalN <i class="c-blue fa fa-git-square" aria-hidden="true"></i></li>
+                    <li><a href="https://bg.linkedin.com/in/paskal-novakov-87704896" title="bg.linkedin.com/in/paskal-novakov-87704896">bg.linkedin.com/in/paskal-novakov-87704896</a> <i class="c-blue fa fa-linkedin-square" aria-hidden="true"></i></li>
+                    <li><a href="https://www.github.com/PaskalN">github.com/PaskalN</a> <i class="c-blue fa fa-git-square" aria-hidden="true"></i></li>
                 </ul>
             </div>
         </div>
@@ -74,7 +72,7 @@
     </section>
 
     <section id="experience" class="information">
-        <div class="shell">
+        <div class="shell info-panel">
             <h2 class="title c-blue">Work Experience</h2>
             <div class="f-item">
                 <div class="description">
@@ -182,7 +180,7 @@
     </section>
 
     <section id="education" class="information">
-        <div class="shell">
+        <div class="shell info-panel">
             <h2 class="title c-blue">Education</h2>
 
             <div class="f-item">
@@ -249,7 +247,7 @@
     </section>
 
     <section id="interests" class="information">
-        <div class="shell">
+        <div class="shell info-panel">
             <h2 class="title c-blue">Interests</h2>
 
             <span>Electronic Music Production</span>
