--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="main-contacts tx-sm">
                     <li><a href="mail:paskal.novakov@gmail.com">paskal.novakov@gmail.com</a> <i class="c-blue fa fa-inbox" aria-hidden="true"></i></li>
                     <li><a href="tel:+359896001913">+359 89 600 1913</a> <i class="c-blue fa fa-mobile" aria-hidden="true"></i></li>
-                    <li>Varna, Bulgaria <i class="c-blue fa fa-map-marker" aria-hidden="true"></i></li>
+                    <li><span>Varna, Bulgaria</span> <i class="c-blue fa fa-map-marker" aria-hidden="true"></i></li>
                     <li><a href="https://bg.linkedin.com/in/paskal-novakov-87704896" title="bg.linkedin.com/in/paskal-novakov-87704896">bg.linkedin.com/in/paskal-novakov-87704896</a> <i class="c-blue fa fa-linkedin-square" aria-hidden="true"></i></li>
                     <li><a href="https://www.github.com/PaskalN">github.com/PaskalN</a> <i class="c-blue fa fa-git-square" aria-hidden="true"></i></li>
                 </ul>
@@ -62,7 +62,7 @@
         <div class="shell">
             <h2 class="title c-blue">Projects</h2>
 
-            <div class="f-item">
+            <div class="f-item item-1-md">
                 <div class="description">
                     <h3 class="tx-c item-1 p-title c-blue">Unfortunately Due to the NDA, I cannot share the project list</h3>
                     <h4 class="tx-c item-1 p-company c-light">I have worked with clients from UK / DE / US / NL / AU / UAE</h4>
@@ -74,7 +74,7 @@
     <section id="experience" class="information">
         <div class="shell info-panel">
             <h2 class="title c-blue">Work Experience</h2>
-            <div class="f-item">
+            <div class="f-item item-2-md item-1-sm">
                 <div class="description">
                     <h3 class="item-1 p-title c-blue">Senior Salesforce Commerce Cloud Developer</h3>
                     <h4 class="item-1 p-company c-light">Astound Commerce</h4>
@@ -104,7 +104,7 @@
                 </div>
             </div>
 
-            <div class="f-item">
+            <div class="f-item item-2-md item-1-sm">
                 <div class="description">
                     <h3 class="item-1 p-title c-blue">Freelance SFCC</h3>
                     <ul>
@@ -134,7 +134,7 @@
                 </div>
             </div>
 
-            <div class="f-item">
+            <div class="f-item item-1-md">
                 <div class="description">
                     <h3 class="item-1 p-title c-blue">Senior Front-End Lecturer</h3>
                     <h4 class="item-1 p-company c-light">Advance Academy</h4>
@@ -159,18 +159,18 @@
         </div>
     </section>
 
-    <section id="language" class="information">
+    <section id="certificates" class="information">
         <div class="shell">
             <h2 class="title c-blue">Certificates</h2>
 
-            <div class="f-item">
+            <div class="f-item item-1-sm">
                 <div class="description">
                     <h3 class="item-1 p-title c-blue">Salesforce B2C Commerce Developer Certificate</h3>
                     <h4 class="item-1 p-company c-light">Credential ID 19773915</h4>
                 </div>
             </div>
 
-            <div class="f-item">
+            <div class="f-item item-1-sm">
                 <div class="description">
                     <h3 class="item-1 p-title c-blue">Frontend Developer</h3>
                     <h5 class="item-2 p-date c-blue">2015 - Present</h5>
@@ -183,7 +183,7 @@
         <div class="shell info-panel">
             <h2 class="title c-blue">Education</h2>
 
-            <div class="f-item">
+            <div class="f-item item-2-md item-1-sm">
                 <div class="description">
                     <h3 class="item-1 p-title c-blue">PhD Heat Turbomachines</h3>
                     <h5 class="item-2 p-date c-blue">03 / 2016</h5>
@@ -198,7 +198,7 @@
                 </div>
             </div>
 
-            <div class="f-item">
+            <div class="f-item item-2-md item-1-sm">
                 <div class="description">
                     <h3 class="item-1 p-title c-blue">Master</h3>
                     <h5 class="item-2 p-date c-blue">09 / 2007 - 04 / 2013</h5>
@@ -211,7 +211,7 @@
                 </div>
             </div>
 
-            <div class="f-item">
+            <div class="f-item item-1-md item-1-sm">
                 <div class="description">
                     <h3 class="item-1 p-title c-blue">High School Certificate</h3>
                     <h4 class="item-1 p-company c-light">Architecture High School - Lubor Bayer</h4>
