--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <div class="f-item item-1-md">
                 <div class="description">
-                    <h3 class="tx-c item-1 p-title c-blue">Unfortunately Due to the NDA, I cannot share the project list</h3>
+                    <h3 class="tx-c item-1 p-title c-blue">Unfortunately due to the NDAs, I cannot share the project list</h3>
                     <h4 class="tx-c item-1 p-company c-light">I have worked with clients from UK / DE / US / NL / AU / UAE</h4>
                 </div>
             </div>			
@@ -91,11 +91,11 @@
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Playing role as a Backup Team Leader</li>
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Updating JIRA Project Documentation / TSD / FSD ...</li>
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Payment Service Implementation</li>
-                        <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Single / Multi Shippping</li>
+                        <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Single / Multi Shipments</li>
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Store Logic Development</li>
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Service Implementation SOAP/REST</li>
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Developing Custom Framework for Checkout</li>
-                        <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Order Flow / Managment</li>
+                        <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Order Flow / Management</li>
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Data exchange</li>
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Integrating external 3PI systems</li>
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> High Level Front-End Development of Components / Widgets </li>
