--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <h4 class="item-1 p-company c-light">Zodiak LTD</h4>
                     <ul>
                         <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Maintaining Ship Machinery</li>
-                        <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Developing Marcos Calculators for precise main-engine fuel consumption calculation</li>
+                        <li><i class="c-blue fa fa-circle" aria-hidden="true"></i> Developing Macros Calculators for precise main-engine fuel consumption calculation</li>
 
                     </ul>
                 </div>
